- Fixed Bug #42364 Crash when using getRealPath with DirectoryIterator